# cmakefbc

./: .gitattributes  .gitignore  CMakeDetermineFbcCompiler.cmake  CMakeFbcCompiler.cmake.in  CMakeFbcInformation.cmake  CMakeLists.txt  CMakeTestFbcCompiler.cmake  ChangeLog.md  Install.md  Licence.md  Licence.txt  ReadMe.md  Usage.md  _1_Install.md  _2_Usage.md  _3_Tool.md  _4_FileFold.md  _9_ChangeLog.md  _A_FileFold.md  _ChangeLog.md  _FileFold.md  _Install.md  _Licence.md  _ReadMe.md.in  _Usage.md  _z_ChangeLog.md  cmakefbc.geany  configure  index.html  params.json
Platform/: Windows-fbc.cmake
cmake/: cmakefbc
cmake/Modules/: CMakeDetermineFbcCompiler.cmake  CMakeFbcCompiler.cmake.in  CMakeFbcInformation.cmake  CMakeTestFbcCompiler.cmake  FindFb-Doc.cmake  FindFbDoc.cmake  ReadMe.md  UseFb-Doc.cmake  UseFbDoc.cmake
cmake/Modules/Platform/: Linux-Fbc.cmake  Linux-fbc.cmake  Windows-Fbc.cmake  Windows-fbc.cmake
cmake_fb_deps/: CMakeLists.txt  Tool.md  _Tool.md  cmake_fb_deps.bas
cmakefbc_deps/: CMakeLists.txt  cmakefbc_deps.bas
debian/: CMakeLists.txt  README  README.Debian  README.source  changelog  changelog.jessie  changelog.wheezy  cmake_fb_deps.1  cmakefbc-doc.docs  cmakefbc.1  cmakefbc.dirs  cmakefbc.install  cmakefbc.manpages  cmakefbc_deps.1  control  control.jessie  control.packages  control.wheezy  copyright  docs  rules  rules.in
doc/: CMakeLists.txt  DoxyExtension.in  Doxyfile  cmakefbc.xml  fb-doc.lfn
doxy/: CMakeLists.txt  Doxyfile  cmakefbc.css  cmakefbc.xml
fb_depends/: CMakeLists.txt  fb_depends.bas
src/bas/: CMakeLists.txt  cmakefbc_deps.bas
src/doc/: ReadMe.md.in  _3_Tool.md  _z_ChangeLog.md
